objects/CMPL123CME__EMDR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__C3_Frequency_Units1__c</fullName>
        <description>C3 - #1 Frequency Units</description>
        <inlineHelpText>C3 - #1 Frequency Units</inlineHelpText>
        <label>C3 - #1 Frequency Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>per second</fullName>
                </value>
                <value>
                    <fullName>per minute</fullName>
                </value>
                <value>
                    <fullName>per hour</fullName>
                </value>
                <value>
                    <fullName>per day</fullName>
                </value>
                <value>
                    <fullName>per week</fullName>
                </value>
                <value>
                    <fullName>per month</fullName>
                </value>
                <value>
                    <fullName>per year</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Frequency_Units2__c</fullName>
        <description>C3 - #2 Frequency Units</description>
        <inlineHelpText>C3 - #2 Frequency Units</inlineHelpText>
        <label>C3 - #2 Frequency Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>per second</fullName>
                </value>
                <value>
                    <fullName>per minute</fullName>
                </value>
                <value>
                    <fullName>per hour</fullName>
                </value>
                <value>
                    <fullName>per day</fullName>
                </value>
                <value>
                    <fullName>per week</fullName>
                </value>
                <value>
                    <fullName>per month</fullName>
                </value>
                <value>
                    <fullName>per year</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Route_Used1__c</fullName>
        <description>C3 - #1 Route Used</description>
        <inlineHelpText>C3 - #1 Route Used</inlineHelpText>
        <label>C3 - #1 Route Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auricular (otic)</fullName>
                </value>
                <value>
                    <fullName>Buccal</fullName>
                </value>
                <value>
                    <fullName>Cutaneous</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Endocervical</fullName>
                </value>
                <value>
                    <fullName>Endosinusial</fullName>
                </value>
                <value>
                    <fullName>Endotracheal</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Extra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Hemodialysis</fullName>
                </value>
                <value>
                    <fullName>Intra corpus cavernosum</fullName>
                </value>
                <value>
                    <fullName>Intra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Intra-arterial</fullName>
                </value>
                <value>
                    <fullName>Intra-articular</fullName>
                </value>
                <value>
                    <fullName>Intra-uterine</fullName>
                </value>
                <value>
                    <fullName>Intracardiac</fullName>
                </value>
                <value>
                    <fullName>Intracavernous</fullName>
                </value>
                <value>
                    <fullName>Intracerebral</fullName>
                </value>
                <value>
                    <fullName>Intracervical</fullName>
                </value>
                <value>
                    <fullName>Intracisternal</fullName>
                </value>
                <value>
                    <fullName>Intracorneal</fullName>
                </value>
                <value>
                    <fullName>Intracoronary</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
                <value>
                    <fullName>Intradiscal (intraspinal)</fullName>
                </value>
                <value>
                    <fullName>Intrahepatic</fullName>
                </value>
                <value>
                    <fullName>Intralesional</fullName>
                </value>
                <value>
                    <fullName>Intralymphatic</fullName>
                </value>
                <value>
                    <fullName>Intramedullar (bone marrow)</fullName>
                </value>
                <value>
                    <fullName>Intrameningeal</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Route_Used2__c</fullName>
        <description>C3 - #2 Route Used</description>
        <inlineHelpText>C3 - #2 Route Used</inlineHelpText>
        <label>C3 - #2 Route Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auricular (otic)</fullName>
                </value>
                <value>
                    <fullName>Buccal</fullName>
                </value>
                <value>
                    <fullName>Cutaneous</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Endocervical</fullName>
                </value>
                <value>
                    <fullName>Endosinusial</fullName>
                </value>
                <value>
                    <fullName>Endotracheal</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Extra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Hemodialysis</fullName>
                </value>
                <value>
                    <fullName>Intra corpus cavernosum</fullName>
                </value>
                <value>
                    <fullName>Intra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Intra-arterial</fullName>
                </value>
                <value>
                    <fullName>Intra-articular</fullName>
                </value>
                <value>
                    <fullName>Intra-uterine</fullName>
                </value>
                <value>
                    <fullName>Intracardiac</fullName>
                </value>
                <value>
                    <fullName>Intracavernous</fullName>
                </value>
                <value>
                    <fullName>Intracerebral</fullName>
                </value>
                <value>
                    <fullName>Intracervical</fullName>
                </value>
                <value>
                    <fullName>Intracisternal</fullName>
                </value>
                <value>
                    <fullName>Intracorneal</fullName>
                </value>
                <value>
                    <fullName>Intracoronary</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
                <value>
                    <fullName>Intradiscal (intraspinal)</fullName>
                </value>
                <value>
                    <fullName>Intrahepatic</fullName>
                </value>
                <value>
                    <fullName>Intralesional</fullName>
                </value>
                <value>
                    <fullName>Intralymphatic</fullName>
                </value>
                <value>
                    <fullName>Intramedullar (bone marrow)</fullName>
                </value>
                <value>
                    <fullName>Intrameningeal</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_1_Therapy_Dates_Stop_Date1_Null__c</fullName>
        <description>C4 - #1 Therapy Dates - Stop Date Null</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Stop Date Null</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Stop Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_1_Therapy_Treatment_Start_Date_Null__c</fullName>
        <description>C4-#1 Treatment/Therapy Start Date Null</description>
        <inlineHelpText>C4-#1 Treatment/Therapy Start Date Null</inlineHelpText>
        <label>C4-#1 Treatment/Therapy Start Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_1_Therapy_Treatment_Start_Date__c</fullName>
        <description>C4-#1 Treatment/Therapy Start Date</description>
        <inlineHelpText>C4-#1 Treatment/Therapy Start Date</inlineHelpText>
        <label>C4-#1 Treatment/Therapy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_1_Therapy_Treatment_Stop_Date_Null__c</fullName>
        <description>C4-#1 Treatment/Therapy Stop Date Null</description>
        <inlineHelpText>C4-#1 Treatment/Therapy Stop Date Null</inlineHelpText>
        <label>C4-#1 Treatment/Therapy Stop Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_1_Therapy_Treatment_Stop_Date__c</fullName>
        <description>C4-#1 Treatment/Therapy Stop Date</description>
        <inlineHelpText>C4-#1 Treatment/Therapy Stop Date</inlineHelpText>
        <label>C4-#1 Treatment/Therapy Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_2_Therapy_Treatment_Start_Date_Null__c</fullName>
        <description>C4-#2 Treatment/Therapy Start Date Null</description>
        <inlineHelpText>C4-#2 Treatment/Therapy Start Date Null</inlineHelpText>
        <label>C4-#2 Treatment/Therapy Start Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_2_Therapy_Treatment_Start_Date__c</fullName>
        <description>C4-#2 Treatment/Therapy Start Date</description>
        <inlineHelpText>C4-#2 Treatment/Therapy Start Date</inlineHelpText>
        <label>C4-#2 Treatment/Therapy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_2_Therapy_Treatment_Stop_Date_Null__c</fullName>
        <description>C4-#2 Treatment/Therapy Stop Date Null</description>
        <inlineHelpText>C4-#2 Treatment/Therapy Stop Date Null</inlineHelpText>
        <label>C4-#2 Treatment/Therapy Stop Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_2_Therapy_Treatment_Stop_Date__c</fullName>
        <description>C4-#2 Treatment/Therapy Stop Date</description>
        <inlineHelpText>C4-#2 Treatment/Therapy Stop Date</inlineHelpText>
        <label>C4-#2 Treatment/Therapy Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Date_Stop_Date1__c</fullName>
        <description>C4 - #1 Therapy Dates - Stop Date</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Stop Date</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Date_Stop_Date2_Null__c</fullName>
        <description>C4 - #2 Therapy Dates - Stop Date Null</description>
        <inlineHelpText>C4 - #2 Therapy Dates - Stop Date Null</inlineHelpText>
        <label>C4 - #2 Therapy Dates - Stop Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Date_Stop_Date2__c</fullName>
        <description>C4 - #2 Therapy Dates - Stop Date</description>
        <inlineHelpText>C4 - #2 Therapy Dates - Stop Date</inlineHelpText>
        <label>C4 - #2 Therapy Dates - Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date1_Null__c</fullName>
        <description>C4 - #1 Therapy Dates - Start Date Null</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Start Date Null</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Start Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date1__c</fullName>
        <description>C4 - #1 Therapy Dates - Start Date</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Start Date</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date2_Null__c</fullName>
        <description>C4 - #2 Therapy Dates - Start Date Null</description>
        <inlineHelpText>C4 - #2 Therapy Dates - Start Date Null</inlineHelpText>
        <label>C4 - #2 Therapy Dates - Start Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date2__c</fullName>
        <description>C4 - #2 Therapy Dates - Start Date</description>
        <inlineHelpText>C4 - #2 Therapy Dates - Start Date</inlineHelpText>
        <label>C4 - #2 Therapy Dates - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C5_Diagnosis_for_Use1__c</fullName>
        <description>C5 - #1 Diagnosis for Use</description>
        <inlineHelpText>C5 - #1 Diagnosis for Use</inlineHelpText>
        <label>C5 - #1 Diagnosis for Use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C5_Diagnosis_for_Use2__c</fullName>
        <description>C5 - #2 Diagnosis for Use</description>
        <inlineHelpText>C5 - #2 Diagnosis for Use</inlineHelpText>
        <label>C5 - #2 Diagnosis for Use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C6_Is_the_Product_Compounded1__c</fullName>
        <description>C6 - #1 Is the Product Compounded?</description>
        <inlineHelpText>C6 - #1 Is the Product Compounded?</inlineHelpText>
        <label>C6 - #1 Is the Product Compounded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C6_Is_the_Product_Compounded2__c</fullName>
        <description>C6 - #2 Is the Product Compounded?</description>
        <inlineHelpText>C6 - #2 Is the Product Compounded?</inlineHelpText>
        <label>C6 - #2 Is the Product Compounded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C6_Product_Type_1__c</fullName>
        <description>C6 - #1 Product Type</description>
        <inlineHelpText>C6 - #1 Product Type</inlineHelpText>
        <label>C6 - #1 Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Compounded</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Biosimilar</fullName>
                </value>
                <value>
                    <fullName>PreANDA</fullName>
                </value>
                <value>
                    <fullName>Pre1938</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C6_Product_Type_2__c</fullName>
        <description>C6 - #2 Product Type</description>
        <inlineHelpText>C6 - #2 Product Type</inlineHelpText>
        <label>C6 - #2 Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Compounded</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Biosimilar</fullName>
                </value>
                <value>
                    <fullName>PreANDA</fullName>
                </value>
                <value>
                    <fullName>Pre1938</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_1_Exp_Date_Null__c</fullName>
        <description>C7 - #1 Exp. Date Null</description>
        <inlineHelpText>C7 - #1 Exp. Date Null</inlineHelpText>
        <label>C7 - #1 Exp. Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_1_Exp_Date__c</fullName>
        <description>C7 - #1 Exp. Date</description>
        <inlineHelpText>C7 - #1 Exp. Date</inlineHelpText>
        <label>C7 - #1 Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_2_Exp_Date_Null__c</fullName>
        <description>C7 - #2 Exp. Date Null</description>
        <inlineHelpText>C7 - #2 Exp. Date Null</inlineHelpText>
        <label>C7 - #2 Exp. Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_2_Exp_Date__c</fullName>
        <description>C7 - #2 Exp. Date</description>
        <inlineHelpText>C7 - #2 Exp. Date</inlineHelpText>
        <label>C7 - #2 Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_Is_the_Product_Over_the_Counter1__c</fullName>
        <description>C7 - #1 Is the Product Over-the-Counter?</description>
        <inlineHelpText>C7 - #1 Is the Product Over-the-Counter?</inlineHelpText>
        <label>C7 - #1 Is the Product Over-the-Counter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C7_Is_the_Product_Over_the_Counter2__c</fullName>
        <description>C7 - #2 Is the Product Over-the-Counter?</description>
        <inlineHelpText>C7 - #2 Is the Product Over-the-Counter?</inlineHelpText>
        <label>C7 - #2 Is the Product Over-the-Counter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_1_Event_Abated_After_Use_Stopped__c</fullName>
        <description>C8 - #1 Event Abated After Use Stopped?</description>
        <inlineHelpText>C8 - #1 Event Abated After Use Stopped?</inlineHelpText>
        <label>C8 - #1 Event Abated After Use Stopped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_2_Event_Abated_After_Use_Stopped__c</fullName>
        <description>C8 - #2 Event Abated After Use Stopped?</description>
        <inlineHelpText>C8 - #2 Event Abated After Use Stopped?</inlineHelpText>
        <label>C8 - #2 Event Abated After Use Stopped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_Exp_Date1_Null__c</fullName>
        <description>C8 - #1 Exp. Date Null</description>
        <inlineHelpText>C8 - #1 Exp. Date Null</inlineHelpText>
        <label>C8 - #1 Exp. Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_Exp_Date1__c</fullName>
        <description>C8 - #1 Exp. Date</description>
        <inlineHelpText>C8 - #1 Exp. Date</inlineHelpText>
        <label>C8 - #1 Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_Exp_Date2_Null__c</fullName>
        <description>C8 - #2 Exp. Date Null</description>
        <inlineHelpText>C8 - #2 Exp. Date Null</inlineHelpText>
        <label>C8 - #2 Exp. Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C8_Exp_Date2__c</fullName>
        <description>C8 - #2 Exp. Date</description>
        <inlineHelpText>C8 - #2 Exp. Date</inlineHelpText>
        <label>C8 - #2 Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C9_1_Event_Reappeared_After_Reintro__c</fullName>
        <description>C9 - #1 Event Reappeared After Reintro</description>
        <inlineHelpText>C9 - #1 Event Reappeared After Reintro</inlineHelpText>
        <label>C9 - #1 Event Reappeared After Reintro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C9_2_Event_Reappeared_After_Reintro__c</fullName>
        <description>C9 - #2 Event Reappeared After Reintro</description>
        <inlineHelpText>C9 - #2 Event Reappeared After Reintro</inlineHelpText>
        <label>C9 - #2 Event Reappeared After Reintro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C9_Evt_Abated_After_Use_Stopped1__c</fullName>
        <description>C9 - #1 Evt Abated After Use Stopped?</description>
        <inlineHelpText>C9 - #1 Evt Abated After Use Stopped?</inlineHelpText>
        <label>C9 - #1 Evt Abated After Use Stopped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C9_Evt_Abated_After_Use_Stopped2__c</fullName>
        <description>C9 - #2 Evt Abated After Use Stopped?</description>
        <inlineHelpText>C9 - #2 Evt Abated After Use Stopped?</inlineHelpText>
        <label>C9 - #2 Evt Abated After Use Stopped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMEMDRcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>